--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -105,6 +105,7 @@
   display: flex;
   justify-content: space-between;
   max-width: 100%;
+  min-height: 60px;
   height: 73px;
   padding: 0 40px;
   position: relative;
@@ -121,6 +122,7 @@
   line-height: 24px;
   margin: 0 0 0 24px;
   padding: 0;
+  display: flex;
 }
 
 .header__button {
@@ -136,6 +138,7 @@
   margin: 0 20px 0 0;
   padding: 0;
   transition: opacity ease 450ms;
+  display: flex;
 }
 .header__button:hover {
   opacity: 0.6;
@@ -148,6 +151,7 @@
   line-height: 25px;
   margin: 0 12px 0 0;
   padding: 0;
+  display: flex;
 }
 .header__avatar {
   height: 40px;
