--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -25,7 +25,7 @@
 }
 .weather__temperature {
   padding: 0;
-  margin: 0 0 0 16px;
+  margin: 10px 0 0 16px;
   font-family: "Familjen Grotesk";
   font-style: normal;
   font-weight: 700;
