--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -101,14 +101,26 @@
 .nav__button:hover {
   opacity: 0.6;
 }
+
 .header {
   display: flex;
   justify-content: space-between;
   max-width: 100%;
-  min-height: 60px;
   height: 73px;
   padding: 0 40px;
   position: relative;
+}
+
+.header__left-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__right-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header__logo {
@@ -122,9 +134,13 @@
   line-height: 24px;
   margin: 0 0 0 24px;
   padding: 0;
-  display: flex;
 }
 
+.header__right-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .header__button {
   height: 24px;
   font-family: "Familjen Grotesk";
@@ -138,7 +154,6 @@
   margin: 0 20px 0 0;
   padding: 0;
   transition: opacity ease 450ms;
-  display: flex;
 }
 .header__button:hover {
   opacity: 0.6;
@@ -151,8 +166,19 @@
   line-height: 25px;
   margin: 0 12px 0 0;
   padding: 0;
-  display: flex;
 }
 .header__avatar {
   height: 40px;
+}
+
+@media only screen and (max-width: 376px) {
+  .header {
+    visibility: hidden;
+  }
+  .nav {
+    height: 40px;
+  }
+  .nav__menu-button {
+    visibility: visible;
+  }
 }
