--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -14,7 +14,7 @@
   max-width: 100%;
   border-radius: 12px;
 }
-.weather__bg {
+.weather__background {
   padding: 0;
   margin: 0;
   max-width: 100%;
