--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -111,13 +111,13 @@
   position: relative;
 }
 
-.header__left-side {
+.header__left {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.header__right-side {
+.header__right {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -171,7 +171,7 @@
   height: 40px;
 }
 
-@media only screen and (max-width: 376px) {
+/*@media only screen and (max-width: 376px) {
   .header {
     visibility: hidden;
   }
@@ -181,4 +181,4 @@
   .nav__menu-button {
     visibility: visible;
   }
-}
+}*/
