--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -171,14 +171,72 @@
   height: 40px;
 }
 
-/*@media only screen and (max-width: 376px) {
+@media only screen and (max-width: 425px) {
   .header {
-    visibility: hidden;
+    display: none;
   }
+
   .nav {
-    height: 40px;
+    display: flex;
+    height: 56px;
   }
+
   .nav__menu-button {
+    display: block;
     visibility: visible;
   }
-}*/
+
+  .nav__user-title,
+  .nav__button {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .nav__menu {
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    right: 0;
+    padding: 24px;
+    row-gap: 16px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    border-radius: 0;
+  }
+
+  .nav__menu-close {
+    top: 16px;
+    right: 16px;
+  }
+
+  .nav__avatar {
+    width: 32px;
+    height: 32px;
+  }
+}
+
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+  .header__logo {
+    height: 28px;
+  }
+
+  .header__date {
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .header__button {
+    height: 18px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .header__user-title {
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .header__avatar {
+    height: 28px;
+  }
+}
