--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,10 @@
 .app {
   max-width: 1440px;
   margin: 0 auto;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 }
 input[type="radio"] {
   accent-color: #232323;
