--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -32,3 +32,20 @@
   font-size: 20px;
   line-height: 24px;
 }
+
+@media only screen and (max-width: 576px) {
+  .modal__content {
+    width: 100%;
+    height: auto;
+    max-height: calc(100vh - 40px);
+  }
+
+  .modal__footer {
+    padding: 20px;
+  }
+
+  .modal__paragraph {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
