--- a/src/components/ModalWithForm/ModalWithform.css
+++ b/src/components/ModalWithForm/ModalWithform.css
@@ -106,3 +106,20 @@
   line-height: 20px;
   color: rgba(0, 0, 0, 0.5);
 }
+
+@media only screen and (max-width: 576px) {
+  .modal__content {
+    width: 100%;
+    height: auto;
+    max-height: calc(100vh - 40px);
+  }
+
+  .modal__footer {
+    padding: 20px;
+  }
+
+  .modal__paragraph {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
