--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,9 +8,11 @@
   position: relative;
   margin: 0;
   padding: 18px 16px 0 16px;
+  /* visibility: hidden; */
   display: none;
 }
 .nav__menu-button {
+  /* visibility: hidden; */
   top: 18px;
   right: 16px;
   border-radius: 10px;
@@ -50,6 +52,7 @@
   position: fixed;
   top: 18px;
   right: 22px;
+  /* left: 16px; */
   display: flex;
   flex-direction: column;
   row-gap: 24px;
@@ -72,6 +75,7 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 25px;
+  /* identical to box height */
   width: 157px;
   color: #000000;
   margin: 0;
@@ -94,6 +98,7 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
+  /* identical to box height, or 120% */
   border: none;
   color: #000000;
   transition: opacity 450ms ease;
@@ -101,8 +106,8 @@
 .nav__button:hover {
   opacity: 0.6;
 }
-
 .header {
+  /* background-color: dodgerblue; */
   display: flex;
   justify-content: space-between;
   max-width: 100%;
@@ -111,18 +116,12 @@
   position: relative;
 }
 
-.header__left {
+/* header left side */
+.header__left-side {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
-.header__right {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 .header__logo {
   height: 40px;
 }
@@ -136,10 +135,12 @@
   padding: 0;
 }
 
+/* header right side */
 .header__right-side {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
 }
 .header__button {
   height: 24px;
@@ -150,8 +151,9 @@
   line-height: 24px;
   background-color: transparent;
   border: none;
+  /* outline: none; */
   cursor: pointer;
-  margin: 0 20px 0 0;
+  margin: 0;
   padding: 0;
   transition: opacity ease 450ms;
 }
@@ -164,11 +166,15 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 25px;
-  margin: 0 12px 0 0;
+  margin: 0;
   padding: 0;
 }
 .header__avatar {
   height: 40px;
+}
+.header__link {
+  text-decoration: none;
+  color: #000;
 }
 
 @media only screen and (max-width: 425px) {
