--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -14,7 +14,7 @@
   border-radius: 19px;
   position: relative;
   overflow: hidden;
-  margin: 0;
+  margin: 35px 0 0 0;
   padding: 0;
   display: flex;
   justify-content: center;
