--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -2,7 +2,9 @@
   font-family: "Familjen Grotesk";
   src: url("../../../public/fonts/Familjen_Grotesk/FamiljenGrotesk-Regular.ttf");
 }
-.modal__body {
+.modal__type_image .modal__body {
+  max-width: 100%;
+  height: 498px;
   margin: 0;
   padding: 0;
 }
@@ -22,6 +24,16 @@
 .modal__footer {
   padding: 20px 32px 32px;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+.modal__image {
+  width: 498px !important;
+  height: 100% !important;
+}
+.modal__footer-top {
+  display: flex;
+  justify-content: space-between;
 }
 .modal__paragraph {
   margin: 0;
@@ -32,7 +44,23 @@
   font-size: 20px;
   line-height: 24px;
 }
-
+.modal__delete-button {
+  color: #ff4d00;
+  background-color: transparent;
+  border: none;
+  /* UI text style 1 */
+  font-size: 20px;
+  font-family: "Familjen Grotesk";
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  cursor: pointer;
+  transition: 0.4s ease color;
+}
+.modal__delete-button:hover {
+  color: #ff0000;
+  text-decoration: underline;
+}
 @media only screen and (max-width: 576px) {
   .modal__content {
     width: 100%;
