--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,11 +8,9 @@
   position: relative;
   margin: 0;
   padding: 18px 16px 0 16px;
-  /* visibility: hidden; */
   display: none;
 }
 .nav__menu-button {
-  /* visibility: hidden; */
   top: 18px;
   right: 16px;
   border-radius: 10px;
@@ -52,7 +50,6 @@
   position: fixed;
   top: 18px;
   right: 22px;
-  /* left: 16px; */
   display: flex;
   flex-direction: column;
   row-gap: 24px;
@@ -75,7 +72,6 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 25px;
-  /* identical to box height */
   width: 157px;
   color: #000000;
   margin: 0;
@@ -98,7 +94,6 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
-  /* identical to box height, or 120% */
   border: none;
   color: #000000;
   transition: opacity 450ms ease;
@@ -107,7 +102,6 @@
   opacity: 0.6;
 }
 .header {
-  /* background-color: dodgerblue; */
   display: flex;
   justify-content: space-between;
   max-width: 100%;
@@ -135,7 +129,6 @@
   padding: 0;
 }
 
-/* header right side */
 .header__right-side {
   display: flex;
   justify-content: space-between;
@@ -151,13 +144,48 @@
   line-height: 24px;
   background-color: transparent;
   border: none;
-  /* outline: none; */
   cursor: pointer;
   margin: 0;
   padding: 0;
   transition: opacity ease 450ms;
 }
 .header__button:hover {
+  opacity: 0.6;
+}
+.header__login-button {
+  cursor: pointer;
+  height: 24px;
+  background-color: transparent;
+  border: none;
+  padding: none;
+  margin: 0;
+  font-family: "Familjen Grotesk";
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  transition: opacity ease 450ms;
+}
+.header__login-button:hover {
+  opacity: 0.6;
+}
+.header__signup-button {
+  cursor: pointer;
+  height: 24px;
+  background-color: transparent;
+  border: none;
+  padding: none;
+  margin: 0;
+  font-family: "Familjen Grotesk";
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  transition: opacity ease 450ms;
+}
+.header__signup-button:hover {
   opacity: 0.6;
 }
 .header__user-title {
@@ -171,78 +199,40 @@
 }
 .header__avatar {
   height: 40px;
+  border-radius: 50%;
 }
 .header__link {
   text-decoration: none;
-  color: #000;
+  color: hsl(0, 0%, 0%);
+}
+.header__avatar-placeholder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-align: center;
+  font-family: "Familjen Grotesk";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration: none;
+  border-radius: 40px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.2);
+  width: 40px;
+  height: 40px;
+  color: #fff;
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 376px) {
   .header {
-    display: none;
+    visibility: hidden;
   }
-
   .nav {
-    display: flex;
-    height: 56px;
+    height: 40px;
   }
-
   .nav__menu-button {
-    display: block;
     visibility: visible;
-  }
-
-  .nav__user-title,
-  .nav__button {
-    font-size: 16px;
-    line-height: 20px;
-  }
-
-  .nav__menu {
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    right: 0;
-    padding: 24px;
-    row-gap: 16px;
-    justify-content: flex-start;
-    align-items: flex-start;
-    border-radius: 0;
-  }
-
-  .nav__menu-close {
-    top: 16px;
-    right: 16px;
-  }
-
-  .nav__avatar {
-    width: 32px;
-    height: 32px;
-  }
-}
-
-@media only screen and (min-width: 426px) and (max-width: 768px) {
-  .header__logo {
-    height: 28px;
-  }
-
-  .header__date {
-    font-size: 14px;
-    line-height: 18px;
-  }
-
-  .header__button {
-    height: 18px;
-    font-size: 14px;
-    line-height: 18px;
-  }
-
-  .header__user-title {
-    font-size: 14px;
-    line-height: 18px;
-  }
-
-  .header__avatar {
-    height: 28px;
   }
 }
